Move jquery stuff down, make switch toggle wireframe

--- a/dexnet_saas/index.html
+++ b/dexnet_saas/index.html
@@ -33,12 +33,12 @@
             <a> Rescaled mesh </a>
             <a> Grasps </a>
         </div>
-        <div id="settings-menu" class="sidenav" style="right:250px">
+        <div id="settings-menu" class="sidenav" style="right:250px;">
             <div style="position:absolute;width:280px">
-                <a href="" style="float:left"> Filter by metric </a>
-                <div style="float:right;top:10px" class="onoffswitch">
-                    <input type="checkbox" class="onoffswitch-checkbox" id="myonoffswitch" />
-                    <label class="onoffswitch-label" for="myonoffswitch">
+                <a href="" style="float:left;font-size:18px"> Render as wireframe </a>
+                <div style="float:right;top:4px" class="onoffswitch">
+                    <input type="checkbox" class="onoffswitch-checkbox" id="wireframe-enable" />
+                    <label class="onoffswitch-label" for="wireframe-enable">
                         <span class="onoffswitch-inner"></span>
                         <span class="onoffswitch-switch"></span>
                     </label>
