Minor text changes

--- a/dexnet_saas/index.html
+++ b/dexnet_saas/index.html
@@ -25,7 +25,7 @@
 
     <div id="menu" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeL0Menu()">&times;</a>
-        <a href="" id="upload-link">Upload Mesh</a>
+        <a href="" id="upload-link">Select Mesh</a>
         <a href="" onclick="event.preventDefault(); openL1Menu('download-menu')">Download</a>
         <a href="" onclick="event.preventDefault(); openL1Menu('settings-menu')">Settings</a>
     </div>
