Some debugging cleanup

--- a/dexnet_saas/index.html
+++ b/dexnet_saas/index.html
@@ -71,7 +71,7 @@
             <div id="progress-bar" class="progress-bar">
                 <div id="progress-bar-bar" class="progress-bar-bar"></div>
             </div>
-            <div id="progress-bar-text" class="progress-bar-text">asdf</div>
+            <div id="progress-bar-text" class="progress-bar-text"></div>
         </div>
     </div>
     
